# secretvaults-py

./: .env.example  .pylintrc  .readthedocs.yaml  README.rst  pyproject.toml
.github/workflows/: build-publish-sign-release.yml  lint-test-cover-docs.yml
docs/: Makefile  conf.py  make.bat  toc.rst
docs/_source/: nillion-sv-wrappers.rst  nilsvwrappers.rst  secretvault.rst  secretvaults.base.rst  secretvaults.builder.rst  secretvaults.common.blindfold.rst  secretvaults.common.cluster.rst  secretvaults.common.keypair.rst  secretvaults.common.nuc_cmd.rst  secretvaults.common.paths.rst  secretvaults.common.types.rst  secretvaults.common.utils.rst  secretvaults.dto.builders.rst  secretvaults.dto.collections.rst  secretvaults.dto.common.rst  secretvaults.dto.data.rst  secretvaults.dto.queries.rst  secretvaults.dto.system.rst  secretvaults.dto.users.rst  secretvaults.logger.rst  secretvaults.nildb.base_client.rst  secretvaults.nildb.builder_client.rst  secretvaults.nildb.user_client.rst  secretvaults.rst  secretvaults.user.rst
examples/: README.md  blindfold_allot.py  blindfold_encryption.py  data_create_read.py  data_delete.py  data_update.py  file_encryption_example.py  generate_api_tokens.py  interactive_demo.py  nildb_comparison.py  nilql_allot.py  nilql_encryption.py  org_config.py  owned_data_example.py  plain_mongo.py  query.json  query_create.py  query_creation_prompt_for_LLMs.txt  query_execute.py  schema_create.py  standard_data_example.py
examples/data/: collection.json  collection_file.json  (+1 more)
test/: test_nilql_wrapper.py  test_secret_vault_wrapper.py
(+35 files in other folders)
