[project]
name = "secretvaults"
version = "0.0.0a10"
description = "Wrappers for Nillion's Secret Vault and nilQL"
license = {text = "MIT"}
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv~=1.0.1",
    "requests~=2.32",
    "nilql==0.0.0a13",
    "PyJWT[crypto]~=2.10.1",
    "ecdsa~=0.19.0",
    "aiohttp~=3.11.12",
    "nuc@git+https://github.com/NillionNetwork/nuc-py#0068a9a9a4d2927eb0a55932f390690f0b0f0f0b",
]

[project.urls]
Repository = "https://github.com/NillionNetwork/secretvaults-py"

[project.optional-dependencies]
docs = [
    "toml~=0.10.2",
    "sphinx~=5.0",
    "sphinx-rtd-theme~=2.0.0"
]
test = [
    "pytest~=8.2",
    "pytest-cov~=5.0",
    "pytest-asyncio~=0.25.3"
]
lint = [
    "pylint~=3.2.0"
]
coveralls = [
    "coveralls~=4.0"
]
publish = [
    "build~=0.10",
    "twine~=4.0"
]

[build-system]
requires = [
    "setuptools>=68.0"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=docs --ignore=example --cov=secretvaults --cov-report term-missing"

[tool.black]
line-length = 120
